--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -222,7 +222,7 @@ h1{
 }
 
 .actor-section, .contact-section{
-  height: 100vh;
+  min-height: 100vh;
   background: url(../images/FundoLimpo.png);
   background-repeat: no-repeat;
   background-size: cover;
